# rust-codecov

./: .gitignore  README.md  source.txt
codecovsample/: Cargo.toml
codecovsample/src/: main.rs
output/cargokcov-ptrace/: index.js
output/cargokcov-ptrace/codecovsample-135740af7e4c484d/: codecovsample-135740af7e4c484d  index.js
output/cargokcov-ptrace/codecovsample-135740af7e4c484d/codecovsample-135740af7e4c484d.c8101eaf3ade163b/: cov.xml  coverage.db  coverage.json  index.js  main.rs.fe3ace99.html  main.rs.fe3ace99.js  summary.db
output/cargokcov-ptrace/codecovsample-135740af7e4c484d/codecovsample-135740af7e4c484d.c8101eaf3ade163b/metadata/: fe3ace99
output/cargokcov-ptrace/codecovsample-19b3db8761c0dbbf/: codecovsample-19b3db8761c0dbbf  index.js
output/cargokcov-ptrace/codecovsample-19b3db8761c0dbbf/codecovsample-19b3db8761c0dbbf.c8101eaf3ade163b/: cobertura.xml  coverage.db  coverage.json  index.js  main.rs.fe3ace99.js  summary.db
output/cargokcov-ptrace/kcov-merged/: cobertura.xml  cov.xml  coverage.json  index.js  main.rs.fe3ace99.js  sonarqube.xml  summary.db
output/cargokcov-ptrace/merged-kcov-output/: coverage.db
output/cargokcov-ptrace/merged-kcov-output/metadata/: fe3ace99
output/grcov-profile/: index.html
output/grcov-profile/src/: index.html  main.rs.html
output/grcov-profraw/: index.html
output/grcov-profraw/src/: index.html  main.rs.html
output/llvm-profraw/: cov.lcov  report.txt  source-color.txt  source.txt
output/tarpaulin-ptrace/: tarpaulin-report.html
scripts/: testcoverage.sh
(+1 files in other folders)
