[package]
name = "codecovsample"
version = "0.1.0"
authors = ["Will Brown <will@rebeagle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["executor"] }
async-trait = "0.1"